--- a/trunk/rtl/Makefile
+++ b/trunk/rtl/Makefile
@@ -6,7 +6,7 @@ CC=mb-gcc
 
 XILFLAGS=-mxl-soft-div -msoft-float -mxl-barrel-shift -mno-xl-soft-mul
 CXXFLAGS=-g -ansi -pedantic -Wall
-LNKFLAGS=-Wl,-defsym -Wl,_STACK_SIZE=0x400 -Wl,-defsym -Wl,_HEAP_SIZE=0x400
+LNKFLAGS=-L/home/daniel/Applications/Xilinx/10.1/EDK/gnu/microblaze/lin64/lib -I/home/daniel/Applications/Xilinx/10.1/EDK/gnu/microblaze/lin64/include/ -Wl,-defsym -Wl,_STACK_SIZE=0x400 -Wl,-defsym -Wl,_HEAP_SIZE=0x400
 LIBFLAGS=
 INCFLAGS=
 SIZE=8192
@@ -29,10 +29,10 @@ vhd: bin
 srec: cc
 	mb-objcopy -O srec $(ELFFILE).elf $(ELFFILE).srec
 
-mem: srec bin
+mem: srec bin listing
 	../tools/bin2mem < $(ELFFILE).bin > $(ELFFILE).mem
 	../tools/bin2mem4 < $(ELFFILE).bin
-	../tools/srec2vram $(ELFFILE).srec 0 $(SIZE) > rom.vmem
+	../tools/srec2vram 4 $(ELFFILE).srec 0 $(SIZE) > rom.vmem
 	python top.py $(SIZE)
 
 all: cc listing bin srec mem vhd
